@@ -412,18 +412,6 @@ Otherwise, creates a new L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> object, se
 
 C<no_free> flag of the new object is set to 1.
 
-=head2 get0_next_proto_negotiated
-
-C<method get0_next_proto_negotiated : void ($data_ref : string[], $len_ref : int*);>
-
-Calls native L<SSL_get0_next_proto_negotiated|https://docs.openssl.org/master/man3/SSL_get_certificate> function given the pointer value of the instance, $data_ref, $len_ref.
-
-=head2 get0_next_proto_negotiated_return_string
-
-C<method get0_next_proto_negotiated_return_string : string ()>
-
-Calls L</"get0_next_proto_negotiated"> method given appropriate arguments, and returns the output string.
-
 =head2 get0_alpn_selected
 
 C<method get0_alpn_selected : void ($data_ref : string[], $len_ref : int*);>
