@@ -85,24 +85,6 @@ class Net::SSLeay {
   
   native method get_certificate : Net::SSLeay::X509 ();
   
-  native method get0_next_proto_negotiated : void ($data_ref : string[], $len_ref : int*);
-  
-  method get0_next_proto_negotiated_return_string : string () {
-    
-    my $data_ref = new string[1];
-    my $len = 0;
-    
-    $self->get0_next_proto_negotiated($data_ref, \$len);
-    
-    my $protocol = (string)undef;
-    if ($data_ref) {
-      $protocol = $data_ref->[0];
-      Fn->shorten((mutable string)$protocol, $len);
-    }
-    
-    return $protocol;
-  }
-  
   native method get0_alpn_selected : void ($data_ref : string[], $len_ref : int*);
   
   method get0_alpn_selected_return_string : string () {
